syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc FindById(IdRequest) returns (UserInfoResponse) {}
}

// Register

message RegisterRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string accessToken = 3;
}

// Validate

message ValidateRequest { string accessToken = 1;
  repeated string roles = 2;
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}

message IdRequest{
  int64 id = 1;
}
message UserInfoResponse{
  int64 id = 1;
  string email = 2;
}